@@ -286,7 +286,8 @@ body[data-scripted] .section.subdoc > h6 {
 
 nav {
   display: block;
-  z-index: 100;
+  max-height: 100px; /* h1 > img's height is 90px */
+  overflow: auto;
 }
 
 .section nav {
@@ -750,6 +751,6 @@ Copyright 2007-2008 Wakaba <w@suika.fam.cx>.
 This library is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
 
-$Date: 2008/08/15 05:53:23 $
+$Date: 2008/08/15 16:44:03 $
 
 */
